# ChaoticSystemAnalizator

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.5a93245  README.md
AnalyticsBackend/: CMakeLists.txt
AnalyticsBackend/include/: BackendMain.hpp  BackendTypes.hpp
AnalyticsBackend/src/: BackendMain.cpp  main.cpp
AnalyticsBackend/tmp/: system.hpp
AnalyticsBackend/tmp/input/: system.cuh  system.hpp
ConnectionManager/: CMakeLists.txt
ConnectionManager/include/: BackendBase.hpp  ConnectionTypes.hpp  ConnectionUnit.hpp  FrontendBase.hpp
ConnectionManager/src/: BackendBase.cpp  ConnectionUnit.cpp  FrontendBase.cpp
SystemChecker/: checkSystem.hpp  run_scheme.py  temp_generated.cpp
assets/: others.qrc  pics.qrc
assets/styles/: Buttons.qss  CheckBox.qss  ComboBox.qss  CustomDialog.qss  GridTable.qss  Input.qss  ProgressBar.qss  RadioButton.qss  SpinBox.qss  TextArea.qss  TripleButtonsDialog.qss  main.qss
assets/styles/specific/: MenuWidget.qss  SectionWidget.qss  TabWidget.qss  TemplateFieldWidget.qss
src/: config.h.in  constants.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/backend/: CMakeLists.txt
src/field_window_widgets/: examplewidget.cpp  examplewidget.h  examplewidget.ui
src/field_window_widgets/PhasePortrait/: phaseportrait.cpp  phaseportrait.h  phaseportrait.ui  phaseportrait3d.cpp  phaseportrait3d.h  phaseportrait3d.ui
src/field_window_widgets/PhasePortrait2D/: phaseportrait2d.cpp  phaseportrait2d.h  phaseportrait2d.ui
src/field_window_widgets/SystemSettings/: differencescheme.cpp  differencescheme.h  differencescheme.ui  systemsettings.cpp  systemsettings.h  systemsettings.ui  systemsettings.ui.autosave
src/major_widget/: basewidget.cpp  basewidget.h  majorwidget.cpp  majorwidget.h  majorwidget.ui  templatefieldwidget.cpp  templatefieldwidget.h  templatefieldwidget.ui
src/major_widget/field/: fieldwidget.cpp  fieldwidget.h  fieldwidget.ui  filesmenu.cpp  filesmenu.h  filesmenu.ui  filesmenuitem.cpp  filesmenuitem.h  filesmenuitem.ui
src/major_widget/menu/: menuwidget.cpp  menuwidget.h  menuwidget.ui  sectionwidget.cpp  sectionwidget.h  sectionwidget.ui
src/managers/: schemechecker.cpp  schemechecker.h  systemmanager.cpp  systemmanager.h
src/tools/: graphic2dwidget.cpp  graphic2dwidget.h  graphic3dwidget.cpp  graphic3dwidget.h  rotatingimagewidget.cpp  rotatingimagewidget.h
src/ui_tools/: customcombobox.cpp  customcombobox.h  customwindows.cpp  customwindows.h  gridtable.cpp  gridtable.h  inputs_example.cpp  inputs_example.h  inputs_example.ui  lineedit.cpp  lineedit.h  lineedit.ui  prefixawarevalidator.cpp  prefixawarevalidator.h  style_tools.cpp  style_tools.h
src/ui_tools/btns/: animatediconbuttons.cpp  animatediconbuttons.h  buttons_example.cpp  buttons_example.h  buttons_example.ui  buttonwithwidgets.cpp  buttonwithwidgets.h  closebutton.cpp  closebutton.h  copybutton.cpp  copybutton.h  deletebutton.cpp  deletebutton.h  editbutton.cpp  editbutton.h  settingsbutton.cpp  settingsbutton.h
src/ui_tools/dialog_widget/: customdialog.cpp  customdialog.h  customdialog.ui  shadeddialogwidget.cpp  shadeddialogwidget.h  shadedtriplewidget.cpp  shadedtriplewidget.h  triplebuttonsdialog.cpp  triplebuttonsdialog.h  triplebuttonsdialog.ui
src/ui_tools/stylesheet_processor/: colorpalette.cpp  colorpalette.h  customtooltip.cpp  customtooltip.h  customtooltip.ui  stylesheetprocessor.cpp  stylesheetprocessor.h
